Fix T37485: autocomplete while appending and autocomplete folder behaviour.

This adds functionality to tab-autocomplete folders in the file browser file
field, and the ability to autocomplete .blend files and their sub folders while
linking. If only one match of a blend or a folder is found, it is opened, which
applies to wildcards in the file field now.

Reviewed By: elubie, brecht

Differential Revision: http://developer.blender.org/D20