source/blender/editors/space_file/space_file.c
@@ -396,6 +396,7 @@ static void file_operatortypes(void)
 	WM_operatortype_append(FILE_OT_rename);
 	WM_operatortype_append(FILE_OT_smoothscroll);
 	WM_operatortype_append(FILE_OT_directory);
+	WM_operatortype_append(FILE_OT_filename);
 }
 
 /* NOTE: do not add .blend file reading on this level */
